# security_agent

./: CONFIGURATION.md  LOCAL_VS_CODE_SETUP.md  README.md  REUSABLE_WORKFLOW_USAGE.md  VS_CODE_AGENT_SETUP.md
.github/: README.md
.github/agents/: security-agent.md
.github/examples/: README.md  example-cicd-with-gate.yml  example-daily-scan.yml  example-pr-check.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  security-agent.yml
.github/workflows/vending-machine/: deploy.yml
infra/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/ai_foundry/: main.tf  outputs.tf  variables.tf
infra/modules/container_app/: main.tf  outputs.tf  variables.tf
infra/modules/container_registry/: main.tf  outputs.tf  variables.tf
infra/modules/key_vault/: main.tf  outputs.tf  variables.tf
infra/tests/: ai_foundry.tftest.hcl  container_app.tftest.hcl  container_registry.tftest.hcl  key_vault.tftest.hcl
m365/: .dockerignore  .gitignore  Dockerfile  README.md  coverage.xml  pyproject.toml  requirements.txt
m365/agent/: __init__.py  config.py  main.py
m365/agent/foundry/: __init__.py  agent_client.py
m365/agent/m365/: __init__.py  configurator.py  graph_client.py  security.py  tenant.py
m365/agent/reporting/: __init__.py  reporter.py
m365/agent/rules/: __init__.py  rule_engine.py
m365/rules/: default_rules.yaml
m365/tests/: __init__.py  test_configurator.py  test_graph_client.py  test_main.py  test_reporter.py  test_rule_engine.py  test_security.py  test_tenant.py
