[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m365-security-agent"
version = "0.1.0"
description = "AI agent for monitoring and securing Microsoft 365 tenants, deployed to Azure AI Foundry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.28,<2.0",
    "requests>=2.31,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
foundry = [
    "azure-ai-projects>=1.0.0b3",
    "azure-core>=1.30,<2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.12,<4.0",
    "responses>=0.25,<1.0",
    "ruff>=0.4,<1.0",
]

[project.scripts]
m365-agent = "agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
